# b2b-leadgen-pipeline

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
clients/example/: config.json
docs/: architecture.md
samples/: example_dry_run.csv  example_dry_run.json
scripts/: run_workflow.py
src/first_agentic_workflow/: __init__.py  __main__.py  cli.py  config.py  cost_tracker.py  dedup.py  exceptions.py  models.py
src/first_agentic_workflow/connectors/: csv_export.py  slack.py
src/first_agentic_workflow/processors/: lead_qualifier.py
src/first_agentic_workflow/scrapers/: lead_scraper.py
src/first_agentic_workflow/templates/: lead_qualification.j2
tests/: CLAUDE.md  conftest.py  test_connectors.py  test_cost_tracker.py  test_dedup.py  test_lead_qualifier.py  test_lead_scraper.py  test_models.py  test_workflow_integration.py
workflows/: lead_gen.py
